[gd_scene load_steps=5 format=3 uid="uid://njexo2oymfj4"]

[ext_resource type="Theme" uid="uid://dyt6gjv55e2dy" path="res://ui/main_menu/menu_theme.tres" id="1_nd2a5"]
[ext_resource type="Script" path="res://ui/ingame_menu/ingame_menu.gd" id="2_11xpn"]
[ext_resource type="Shader" path="res://ui/ingame_menu/blur.gdshader" id="3_7ek3e"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o8s47"]
shader = ExtResource("3_7ek3e")
shader_parameter/lod = 2.0

[node name="IngameMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("2_11xpn")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_nd2a5")

[node name="ColorRect" type="ColorRect" parent="Control"]
material = SubResource("ShaderMaterial_o8s47")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1980.0
offset_bottom = 1112.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
offset_right = 734.0
offset_bottom = 960.0

[node name="MarginContainer2" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 140
theme_override_constants/margin_top = 50

[node name="TitleLabel" type="Label" parent="Control/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_font_sizes/font_size = 90
text = "Game Paused"

[node name="MarginContainer" type="MarginContainer" parent="Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 150
theme_override_constants/margin_top = 250

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 8

[node name="ResumeButton" type="Button" parent="Control/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
shortcut_feedback = false
shortcut_in_tooltip = false
text = "Resume Game"

[node name="OptionsButton" type="Button" parent="Control/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Options"

[node name="HowToPlayButton" type="Button" parent="Control/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "How To Play"

[node name="StartNewGameButton" type="Button" parent="Control/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
text = "Start New Game"

[node name="BackToMainMenuButton" type="Button" parent="Control/VBoxContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(500, 100)
layout_mode = 2
text = "Back To Main Menu"

[node name="MarginContainer" type="MarginContainer" parent="Control"]
clip_contents = true
offset_left = 731.0
offset_top = 247.0
offset_right = 1852.0
offset_bottom = 947.0
size_flags_horizontal = 3
theme_override_constants/margin_right = 80

[node name="VBoxContainer" type="CenterContainer" parent="Control/MarginContainer"]
z_index = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4

[connection signal="pressed" from="Control/VBoxContainer/MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer/VBoxContainer/HowToPlayButton" to="." method="_on_how_to_play_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer/VBoxContainer/StartNewGameButton" to="." method="_on_start_new_game_button_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/MarginContainer/VBoxContainer/BackToMainMenuButton" to="." method="_on_back_to_main_menu_button_pressed"]
